# ewand

./: README.md  index.html
arduino/: ewand.ino
cad/: build_instructions.md  eWand.f3d  eWand_part_1.stl  eWand_part_2.stl
calibration_framework/: CMakeLists.txt
calibration_framework/cmake/: wand_calibration-config.cmake.in
calibration_framework/include/: rapidcsv.h
calibration_framework/include/wand_calibration/: BundleAdjustment.h  Initialization.h  SelfCalibration.h  Utils.h  WandCalibration.h
calibration_framework/src/: BundleAdjustment.cpp  CMakeLists.txt  Initialization.cpp  SelfCalibration.cpp  Utils.cpp  WandCalibration.cpp  main.cpp  point_ba.cpp
calibration_framework/test/: CMakeLists.txt  frame_0.csv  frame_0.yaml  frame_1.csv  frame_1.yaml  frame_2.csv  frame_2.yaml  frame_3.csv  frame_3.yaml  test.cpp
resources/: bibtex.txt
scripts/: extract_ball_frames.py
